--- a/src/components/routes/detalleProducto.css
+++ b/src/components/routes/detalleProducto.css
@@ -27,16 +27,23 @@
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: space-around;
+    /* display: flex;
+    justify-content: space-around; */
+
+    display: grid;
+grid-template-columns: repeat(2, 1fr);
+grid-template-rows: repeat(3, 1fr);
+grid-column-gap: 0px;
+grid-row-gap: 0px;
+    
   }
   
   .detalle-izquierda-card {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:space-around
-    
+    justify-content:space-around;
+    grid-area: 1 / 1 / 2 / 2;
   }
   
   .button-detalle {
@@ -59,6 +66,7 @@
   
   .detalle-descripcion-producto {
     font-family: var(--fuente-principal);
+    
   }
   
 .imagen-Detalle-Producto {
@@ -71,4 +79,28 @@
   border: none;
 
   font-size: 1.2rem;
+}
+
+
+
+
+.caracteristicas-container {
+  width: 100%; 
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content: space-around; 
+  padding: 10px; 
+  box-sizing: border-box; 
+  grid-area: 3 / 1 / 4 / 3; 
+}
+
+.caracteristica-item {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.caracteristica-icon {
+  width: 24px;
+  height: 24px;
+  margin-bottom: 5px; 
 }
