--- a/src/components/routes/detalleProducto.css
+++ b/src/components/routes/detalleProducto.css
@@ -12,6 +12,7 @@
     opacity: 1;
     transition: opacity 3s ease;
     z-index: 3;
+
   }
   .background-overlay{
     background-color: rgba(0, 0, 0, 0.5);
@@ -27,15 +28,15 @@
     background-color: white;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    /* display: flex;
-    justify-content: space-around; */
+    display: flex;
+    justify-content: space-around;
 
-    display: grid;
-grid-template-columns: repeat(2, 1fr);
-grid-template-rows: repeat(3, 1fr);
-grid-column-gap: 0px;
-grid-row-gap: 0px;
-    
+    /* display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+         */
   }
   
   .detalle-izquierda-card {
@@ -43,7 +44,9 @@ grid-row-gap: 0px;
     flex-direction: column;
     align-items: center;
     justify-content:space-around;
-    grid-area: 1 / 1 / 2 / 2;
+    /* grid-area: 1 / 1 / 2 / 2; */
+    height: 100%;
+    width: 60%;
   }
   
   .button-detalle {
@@ -61,12 +64,13 @@ grid-row-gap: 0px;
   
   .detalle-de-la-bici {
     font-family: var(--fuente-principal);
-    font-size: 1.5rem;
+    font-size: 1rem;
   }
   
   .detalle-descripcion-producto {
     font-family: var(--fuente-principal);
-    
+    height: 100%;
+    width: 30%;
   }
   
 .imagen-Detalle-Producto {
@@ -78,20 +82,24 @@ grid-row-gap: 0px;
   color: #000000;
   border: none;
 
-  font-size: 1.2rem;
+  font-size: 1rem;
+}
+
+p,h2{
+  font-size: 1rem;
+  
 }
 
 
 
 
 .caracteristicas-container {
-  width: 100%; 
-  display: flex;
-  flex-wrap: wrap; 
-  justify-content: space-around; 
+  width: 30%; 
+text-align: center;
   padding: 10px; 
   box-sizing: border-box; 
-  grid-area: 3 / 1 / 4 / 3; 
+  /* grid-area: 3 / 1 / 4 / 3;  */
+overflow: auto;
 }
 
 .caracteristica-item {
@@ -100,7 +108,140 @@ grid-row-gap: 0px;
 }
 
 .caracteristica-icon {
-  width: 24px;
-  height: 24px;
-  margin-bottom: 5px; 
+  width: 5px;
+  height: 5px;
+  margin-bottom: 1px; 
+}
+
+.tituloCaracteristicas{
+
+width: 100%;
+
+}
+
+
+.container-big-item{
+
+    display: flex;
+display: block;
+}
+
+/* Media queries para hacerlo responsive 768*/
+ @media screen and (max-width: 768px){
+
+article.detalle-producto-card {
+ 
+    padding: 1rem;
+    flex-direction: row;
+    align-items: start;
+  }
+
+  .caracteristicas-container {
+
+  width: 25vw;  
+  overflow: auto;
+  box-sizing: border-box; 
+  height: 60vh;
+  }
+  
+p{
+  font-size: 10px;
+
+}
+
+
+.container-big-item{
+
+  column-count: 2;
+}
+
+
+
+.button.button.button-detalle {
+
+  width: 90px;
+  height: 10px;
+  font-size: 10px;
+  
+}
+
+
+
+div.detalle-izquierda-card{
+box-sizing: border-box;
+width: 50%;
+
+}
+div.detalle-descripcion-producto{
+  box-sizing: border-box;
+  
+
+}
+
+
+ }
+
+ 
+/* Media queries para hacerlo responsive 426*/
+
+ @media screen and (max-width: 426px) {
+  article.detalle-producto-card {
+    flex-direction: column;
+    align-items: center;
+    width: 90vw; 
+    overflow:auto;
+
+  }
+
+  div.detalle-izquierda-card,
+  div.detalle-descripcion-producto,
+  div.caracteristicas-container {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+    height: 35vh;
+
+  }
+
+  .detalle-izquierda-card {
+    height: auto;
+  }
+
+  .detalle-descripcion-producto {
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+  }
+
+  .caracteristicas-container {
+    overflow: auto;
+
+    max-height: 60vh; 
+  }
+
+  .button.button.button-detalle {
+    width: 100%;
+ 
+    font-size: 10px;
+  }
+  
+  .detalle-producto-overlay {
+    overflow: auto;
+
+  }
+  
+  .container-big-item {
+    display: flex;
+    flex-direction: column;
+  }
+
+
+p{
+font-size: 10px;
+
+  }
+  .detalle-producto-card{
+
+    height: 70vh;
+  }
 }
