--- a/src/components/routes/Admin/Admin.css
+++ b/src/components/routes/Admin/Admin.css
@@ -12,3 +12,16 @@
     display: flex;
     flex-direction: column;
 }
+
+
+@media screen and (max-width: 426px) {
+
+    .Admin-container{
+        display: flex;
+        flex-direction: column;
+        box-shadow: 0px 7px 4px 1px #00000040;
+        border-radius: 20px;
+        width: 93vw;
+    
+    }
+}
