--- a/src/components/routes/Admin/Productos/ProductosListar.css
+++ b/src/components/routes/Admin/Productos/ProductosListar.css
@@ -52,3 +52,45 @@ width: 5vw;
 height: 8vh;
 
 }
+
+
+ul{
+
+  padding-left: 1%;
+}
+
+@media screen and (max-width: 426px) {
+
+ul{
+
+  margin: 0%;
+  padding: 0%;
+}
+
+h1{
+
+  text-align: center;
+  font-size: 20px;
+}
+
+
+li.producto-item{
+
+display: block;
+font-size: 20px;
+
+
+}
+
+div.producto-item{
+
+  display: block;
+  
+  }
+p.producto-id,p.producto-categoria{
+  font-size: 20px;
+  margin: 1px;
+  
+}
+
+}
